--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Multiplayer": {
+    "Auth": {
+      "Authority": "exit-path"
+    }
+  }
 }
